--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@
     position: fixed;
     border-bottom: 0.1px solid rgba(161, 160, 160, 0.5);
     border-radius: 0 0 5px 5px ;
-
+    z-index: 9999;
 }
 
 .logo a  {
@@ -74,9 +74,7 @@
     width: 100%;
     height: 100vh;
     display: flex;
-    background-color: aqua;
     justify-content: space-between;
-
     z-index: -1;
 }
 
@@ -88,14 +86,13 @@
 }
 
 .content-image img {
-    margin-top: 75px;
+    margin: 75px 50px 0 0;
     padding: 15px;
     border-radius: 50px;
     width: 450px;
 }
 /* style about*/
 .container-about{
-    background-color: aquamarine;
     width: 100vw;
     height: 100vh;
     margin:auto;
