--- a/style.css
+++ b/style.css
@@ -95,7 +95,6 @@
   height: 100vh;
   padding-top: 50px;
   display: flex;
-  background-color: grey;
   position: relative;
 }
 
@@ -144,7 +143,7 @@
 }
 
 /* responsive */
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 768px) and (min-width: 577px){
   .container-landing-page {
     width: 100%;
     height: 100vh;
@@ -168,5 +167,26 @@
 @media screen and (max-width: 576px) {
   .container-navbar .item-list {
     display: none;
+  }
+
+  .container-landing-page {
+    height: 100vh;
+    flex-wrap: wrap;
+    align-items: center;
+    background-color: aqua;
+    padding: 10px;
+  }
+
+  .container-landing-page .content-intro {
+    width: 100%;
+    left: 0;
+    top: 10px;
+    background-color: antiquewhite;
+  }
+
+  .content-image img {
+    padding: 15px;
+    border-radius: 50px;
+    width: 300px;
   }
 }
