--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@
 .logo a {
   margin-left: 20px;
   font-weight: 500;
-  font-size: 2rem;
+  font-size: 1.5rem;
   letter-spacing: 0px;
   color: #000;
   text-decoration: none;
@@ -118,12 +118,13 @@
   width: 100px;
   height: 50px;
   margin-top: 30px;
-  background: linear-gradient(180deg, #05e0c6 0%, rgba(82, 101, 137, 0.64) 100%);
+  background-color: #afd3e2;
   border-radius: 15px;
 }
 
 .container-about .btn-my-cv a {
-  color: white;
+  color: grey;
+  text-shadow: 0 0 5px white;
   text-decoration: none;
   font-size: 10px;
 }
@@ -173,20 +174,29 @@
     height: 100vh;
     flex-wrap: wrap;
     align-items: center;
-    background-color: aqua;
     padding: 10px;
   }
 
   .container-landing-page .content-intro {
-    width: 100%;
+    width: 70%;
     left: 0;
-    top: 10px;
-    background-color: antiquewhite;
+    top: 50px;
+  }
+
+  .content-image {
+    margin: 0 10px 0 190px;
   }
 
   .content-image img {
     padding: 15px;
     border-radius: 50px;
     width: 300px;
+  }
+
+  .container-about {
+    width: 100vw;
+    height: auto;
+    flex-wrap: wrap;
+    justify-content: center;
   }
 }
