--- a/style.css
+++ b/style.css
@@ -18,14 +18,13 @@
   height: 75px;
   top: 0;
   left: 0;
-  background-color: white;
+  background-color: #fff;
   opacity: 0.8;
   display: flex;
   justify-content: space-between;
   align-items: center;
   position: fixed;
-  border-bottom: 0.1px solid rgba(161, 160, 160, 0.5);
-  border-radius: 0 0 5px 5px;
+  box-shadow: 0 2px 1px rgb(179, 178, 178);
   z-index: 9999;
 }
 
@@ -39,6 +38,7 @@
 }
 
 .item-list ul {
+  align-items: center;
   display: flex;
   width: 40%;
   justify-content: space-between;
@@ -81,6 +81,7 @@
   left: 100px;
   top: 300px;
   position: relative;
+  font-size: 1rem
 }
 
 .content-image img {
@@ -102,7 +103,7 @@
   margin: 50px;
   width: 300px;
   height: 300px;
-  clip-path: circle(150px);
+  clip-path: circle(50%);
 }
 
 .about-me {
@@ -119,7 +120,7 @@
   height: 50px;
   margin-top: 30px;
   background-color: #afd3e2;
-  border-radius: 15px;
+  border-radius: 10px;
 }
 
 .container-about .btn-my-cv a {
@@ -131,27 +132,63 @@
 
 /* style skills */
 .container-skills {
-  width: 100%;
-  height: 100vh;
-  margin: 20px auto;
+  width: 80%;
+  height: 60vh;
+  margin: 70px auto;
   border: 2px solid black;
   border-radius: 60px;
+  display: flex;
 }
 
+/* style for projects */
 .container-project {
-  width: 100%;
+  width: 80%;
   height: 100vh;
+  margin: 70px auto;
+  border: 3px solid black;
+  display: flex;
+}
+
+/* style for contact */
+.container-contact {
+  width: 80%;
+  margin: 50px auto;
+  border: 2px solid black;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.container-project-items {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
+}
+
+.container-project-items .project-items {
+  width: 50%;
+  border: 1px solid grey;
 }
 
 /* responsive */
-@media screen and (max-width: 768px) and (min-width: 577px){
+@media screen and (max-width: 768px) and (min-width: 577px) {
   .container-landing-page {
     width: 100%;
     height: 100vh;
   }
 
+
+  .content-intro {
+    padding: 1em;
+    width: 55%;
+    height: 30vh;
+    left: 20px;
+    top: 15em;
+    position: absolute;
+  }
+
   .content-image img {
-    margin: 150px 50px 0 0;
+    margin: 150px 15px 0 0;
     padding: 15px;
     border-radius: 50px;
     width: 300px;
@@ -166,7 +203,10 @@
 }
 
 @media screen and (max-width: 576px) {
-  .container-navbar .item-list {
+  .container-navbar {
+    position: static;
+  }
+  .item-list {
     display: none;
   }
 
@@ -179,12 +219,9 @@
 
   .container-landing-page .content-intro {
     width: 70%;
-    left: 0;
-    top: 50px;
-  }
-
-  .content-image {
-    margin: 0 10px 0 190px;
+    left: 20px;
+    position: absolute;
+    top: 80px;
   }
 
   .content-image img {
@@ -198,5 +235,9 @@
     height: auto;
     flex-wrap: wrap;
     justify-content: center;
+  }
+  .about-me {
+    width: 100vh;
+    height: 60vh;
   }
 }
