--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@
   scroll-behavior: smooth;
 }
 
-/* style */
 
 /* style header */
 .container-navbar {
@@ -41,9 +40,9 @@
   align-items: center;
   display: flex;
   width: 40%;
-  justify-content: space-between;
   list-style: none;
   margin-right: 30px;
+  align-items: center;
 }
 
 .item-list ul li a {
@@ -57,39 +56,24 @@
   color: #000;
   background-color: #afd3e2;
   text-decoration: none;
-  font-size: 15px;
+  font-size: 1rem;
   border-radius: 20px;
   transition: 0.5s;
 }
 
-.item-list ul li .btn:hover {
+.item-list ul li .btn-contact:hover {
   background-color: black;
   color: white;
 }
 
 /* style landing page */
 .container-landing-page {
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  justify-content: space-between;
-  z-index: -1;
+  padding-top: 80px;
+  display: grid;
+  
 }
 
-.content-intro {
-  width: 30%;
-  left: 100px;
-  top: 300px;
-  position: relative;
-  font-size: 1rem
-}
 
-.content-image img {
-  margin: 75px 50px 0 0;
-  padding: 15px;
-  border-radius: 50px;
-  width: 450px;
-}
 /* style about*/
 .container-about {
   width: 100vw;
@@ -241,3 +225,32 @@
     height: 60vh;
   }
 }
+
+
+
+
+
+
+
+/* .container-landing-page {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: space-between;
+  z-index: -1;
+}
+
+.content-intro {
+  width: 30%;
+  left: 100px;
+  top: 300px;
+  position: relative;
+  font-size: 1rem
+}
+
+.content-image img {
+  margin: 75px 50px 0 0;
+  padding: 15px;
+  border-radius: 50px;
+  width: 450px;
+} */
