--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@
   scroll-behavior: smooth;
 }
 
-
 /* style header */
 .container-navbar {
   width: 100vw;
@@ -45,7 +44,8 @@
   align-items: center;
 }
 
-.item-list ul li a {
+.item-list ul li a,
+.waduh {
   color: #000;
   text-decoration: none;
   margin-right: 15px;
@@ -68,32 +68,59 @@
 
 /* style landing page */
 .container-landing-page {
+  width: 100%;
+  height: 100vh;
   padding-top: 80px;
   display: grid;
-  
+  grid-template-areas: "intro" "image";
+  grid-template-columns: repeat(auto-fit, 50% 50%);
 }
 
+.content-intro {
+  padding: 50px;
+  display: flex;
+  grid-area: "intro";
+  flex-direction: column;
+  justify-content: center;
+}
+
+.content-image {
+  display: flex;
+  grid-area: "image";
+  align-items: center;
+  justify-content: center;
+}
 
 /* style about*/
 .container-about {
-  width: 100vw;
-  height: 100vh;
-  padding-top: 50px;
+  width: 100%;
+  height: auto;
+  padding-top: 80px;
+}
+
+.container-about .my-image {
+  width: 100%;
   display: flex;
-  position: relative;
 }
 
 .container-about .my-image img {
-  margin: 50px;
-  width: 300px;
-  height: 300px;
+  width: 60%;
+  margin: 20px;
   clip-path: circle(50%);
+  justify-content: center;
+}
+
+.content-about {
+  display: flex;
+  align-items: center;
+  padding: 50px;
 }
 
 .about-me {
-  width: 60%;
-  padding: 50px;
-  margin: 20px auto;
+  padding: 10px;
+  width: 100%;
+  font-size: 1rem;
+  font-weight: 350;
   letter-spacing: 1px;
   display: flex;
   flex-direction: column;
@@ -103,8 +130,13 @@
   width: 100px;
   height: 50px;
   margin-top: 30px;
-  background-color: #afd3e2;
+  /* background-color: #afd3e2; */
   border-radius: 10px;
+  box-shadow: none;
+}
+
+.container-about .btn-my-cv:hover{
+  background-color: #fff;
 }
 
 .container-about .btn-my-cv a {
@@ -156,101 +188,45 @@
 
 /* responsive */
 @media screen and (max-width: 768px) and (min-width: 577px) {
-  .container-landing-page {
-    width: 100%;
-    height: 100vh;
+  .content-about {
+    flex-direction: column;
   }
 
-
-  .content-intro {
-    padding: 1em;
-    width: 55%;
-    height: 30vh;
-    left: 20px;
-    top: 15em;
-    position: absolute;
+  .container-about .my-image {
+    justify-content: center;
   }
 
-  .content-image img {
-    margin: 150px 15px 0 0;
-    padding: 15px;
-    border-radius: 50px;
-    width: 300px;
-  }
-
-  .container-about .my-image img {
-    margin: 50px;
-    width: 200px;
-    height: 200px;
-    clip-path: circle(50%);
-  }
 }
 
 @media screen and (max-width: 576px) {
   .container-navbar {
-    position: static;
+    position: fixed;
   }
   .item-list {
     display: none;
   }
 
   .container-landing-page {
+    display: inline-block;
     height: 100vh;
     flex-wrap: wrap;
-    align-items: center;
-    padding: 10px;
   }
 
   .container-landing-page .content-intro {
-    width: 70%;
-    left: 20px;
-    position: absolute;
-    top: 80px;
+    width: 100%;
   }
 
-  .content-image img {
-    padding: 15px;
-    border-radius: 50px;
-    width: 300px;
-  }
-
-  .container-about {
-    width: 100vw;
-    height: auto;
-    flex-wrap: wrap;
+  .container-about .my-image {
+    display: flex;
     justify-content: center;
   }
+
+  .content-about {
+    flex-direction: column;
+  }
   .about-me {
-    width: 100vh;
-    height: 60vh;
+    width: 100%;
+    height: auto;
   }
 }
 
-
-
-
-
-
-
-/* .container-landing-page {
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  justify-content: space-between;
-  z-index: -1;
-}
-
-.content-intro {
-  width: 30%;
-  left: 100px;
-  top: 300px;
-  position: relative;
-  font-size: 1rem
-}
-
-.content-image img {
-  margin: 75px 50px 0 0;
-  padding: 15px;
-  border-radius: 50px;
-  width: 450px;
-} */
