--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 /* font */
-@import url("https://fonts.googleapis.com/css2?family=Lexend:wght@300;400&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Lexend:wght@100;300;400&display=swap');
+/* @font-face {
+  font-family: "lexend";
+  src: url('/fonts/static/Lexend-Black.ttf'), url('/fonts/static/Lexend-Bold.ttf');
+} */
 
 /* reset */
 * {
@@ -71,21 +75,26 @@
   width: 100%;
   height: 100vh;
   padding-top: 80px;
-  display: grid;
-  grid-template-areas: "intro" "image";
-  grid-template-columns: repeat(auto-fit, 50% 50%);
+  display: flex;
+  /* grid-template-areas: "intro" "image";
+  grid-template-columns: repeat(auto-fit, 50% 50%); */
 }
 
 .content-intro {
   padding: 50px;
+  font-size: 20px;
   display: flex;
+  flex: 1;
   grid-area: "intro";
   flex-direction: column;
   justify-content: center;
 }
 
 .content-image {
+  background-color: lawngreen;
+  margin-top: -200px;
   display: flex;
+  flex: 1;
   grid-area: "image";
   align-items: center;
   justify-content: center;
@@ -202,6 +211,7 @@
   .content-intro {
     padding: 1em;
     margin-bottom: 50px;
+    font-size: 1em;
   }
 
   .container-navbar {
